--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,5 +1,5 @@
 ---
-aws_region: eu-west-1
+aws_region: ap-southeast-2
 aws_zone: "{{ aws_region }}a"
 vpc_cidr_block: "172.22.0.0/16"
 key_name: "mqperf-key"
