adding env_hack.sh and a number of reminders to set AWS_ACCESS_KEY_ID and AWS_SECRET_ACCESS_KEY env variables

--- a/ansible/roles/mqperf_node/tasks/main.yml
+++ b/ansible/roles/mqperf_node/tasks/main.yml
@@ -49,6 +49,9 @@
     name: boto3
     extra_args: --ignore-installed
 
+- name: debug
+  debug: msg="key {{ aws_access }} secret {{ aws_secret }}"
+
 - name: Copy deps artifact from S3
   s3:
     bucket: "{{ s3_bucket }}"
